force-app/main/default/objects/WordContentMaster__c/WordContentMaster__c.object-meta.xml
<CustomObject>
    <description>ใช้สำหรับเก็บ field ในเอกสาร word ตั้งต้น ตอน Upload file ที่ Document Template</description>
    <label>Word Content Master</label>
    <nameField>
        <displayFormat>WCM-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Word Content Masters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>