force-app/main/default/objects/WordContentMaster__c/fields/ConditionToQuery__c.field-meta.xml
<CustomField>
    <fullName>ConditionToQuery__c</fullName>
    <label>Condition To Query</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>