force-app/main/default/objects/WordContentMaster__c/fields/DocumentPathName__c.field-meta.xml
<CustomField>
    <fullName>DocumentPathName__c</fullName>
    <label>Document Path Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>