force-app/main/default/objects/WordContentMaster__c/fields/FieldToQuery__c.field-meta.xml
<CustomField>
    <fullName>FieldToQuery__c</fullName>
    <label>Field To Query</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>