force-app/main/default/objects/WordContentMaster__c/fields/FormatType__c.field-meta.xml
<CustomField>
    <fullName>FormatType__c</fullName>
    <label>Format Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IMAGELOOPRELATEDOBJECT</fullName>
            </value>
            <value>
                <fullName>LOOPRELATEDOBJECT</fullName>
            </value>
            <value>
                <fullName>FIELD</fullName>
            </value>
            <value>
                <fullName>IFF</fullName>
            </value>
            <value>
                <fullName>MDT</fullName>
            </value>
            <value>
                <fullName>IMAGEOBJECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>