force-app/main/default/objects/WordContentMaster__c/fields/KeyToReplace__c.field-meta.xml
<CustomField>
    <fullName>KeyToReplace__c</fullName>
    <label>Key To Replace</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>