force-app/main/default/objects/WordContentMaster__c/fields/LookupFieldToQuery__c.field-meta.xml
<CustomField>
    <fullName>LookupFieldToQuery__c</fullName>
    <label>Lookup Field To Query</label>
    <length>80</length>
    <type>Text</type>
</CustomField>