force-app/main/default/objects/WordContentMaster__c/fields/ObjectToQuery__c.field-meta.xml
<CustomField>
    <fullName>ObjectToQuery__c</fullName>
    <label>Object To Query</label>
    <length>80</length>
    <type>Text</type>
</CustomField>