force-app/main/default/objects/WordContentMaster__c/fields/SourceField__c.field-meta.xml
<CustomField>
    <fullName>SourceField__c</fullName>
    <description>ใช้สำหรับ Tag Image เพื่อบอกว่า field ที่ไป query record ที่จะไปดึงรูปมา จะเอา record ไหน</description>
    <label>Source Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>