force-app/main/default/objects/WordContentMaster__c/fields/SourceObject__c.field-meta.xml
<CustomField>
    <fullName>SourceObject__c</fullName>
    <description>ใช้สำหรับ Tag Image ว่าจะต้องไปดึงรูปที่ Object ไหน</description>
    <label>Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>