force-app/main/default/objects/WordContentMaster__c/fields/WordContentExternalKey__c.field-meta.xml
<CustomField>
    <fullName>WordContentExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>Word Content External Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>