force-app/main/default/objects/WordContentMaster__c/fields/ZipFileMasterId__c.field-meta.xml
<CustomField>
    <fullName>ZipFileMasterId__c</fullName>
    <label>Zip File Master Id</label>
    <referenceTo>ZipFile__c</referenceTo>
    <relationshipLabel>Word Content Master</relationshipLabel>
    <relationshipName>tms_WordContentMaster</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>